forth/test/fail/test_call_missing_dot_extern.af
\ Must fail to compile.
" abc" strlen
